--- a/views/about.ejs
+++ b/views/about.ejs
@@ -295,7 +295,7 @@
     >
       <div id="AboutMore">
         <p class="vg-h4 m-2">想了解更多嗎?</p>
-        <a class="btn btn-vg-lg m-1">前往產品資訊</a><br />
+        <a class="btn btn-vg-lg m-1" href="/product">前往產品資訊</a><br />
         <a class="btn btn-vg-lg m-1" href="/contact">聯絡我們</a><br />
       </div>
     </section>
