--- a/views/share/m_green_header.ejs
+++ b/views/share/m_green_header.ejs
@@ -1,13 +1,13 @@
-<nav id="main-nav">
+<nav class="green" id="main-nav">
   <span id="userName" class="vg-ps">user</span>
   <button id="logoutBTN" class="btn btn-vg-sm">登出</button>
-  <a href="/member" class="icon" id="navUser">
+  <a href="/member" class="icon green" id="navUser">
     <i class="fa-solid fa-user"></i>
   </a>
-  <a href="#" class="icon cart-button" id="navCart">
-    <span class="bag-count">0</span>
+  <a href="#" class="icon cart-button green" id="navCart">
+    <span class="bag-count green">0</span>
     <span>
-      <i class="fa-solid fa-cart-shopping img-fluid"></i>
+      <i class="fa-solid fa-cart-shopping img-fluid green"></i>
     </span>
     <!-- <span class="bag-label">View Bag</span> -->
   </a>
@@ -72,13 +72,14 @@
   </main>
 </aside>
 <div id="sidebar-cart-curtain"></div>
-<div class="vg-nav" id="vg-navbar">
+<div class="vg-nav change green" id="vg-navbar">
   <a href="/" class="vg-nav-logo btn-vg-2-active">LOGO</a>
-  <a href="/about" class="btn-vg-2">關於我們</a>
-  <a href="/activityboard" class="btn-vg-2">最新消息</a>
-  <a href="/product" class="btn-vg-2">產品資訊</a>
-  <a href="/blog/page/1" class="btn-vg-2">蔬果專欄</a>
-  <a href="/qna" class="btn-vg-2">常見QA</a>
+  <a href="/about" class="btn-vg-2 green">關於我們</a>
+  <a href="/activityboard" class="btn-vg-2 green">最新消息</a>
+  <a href="/product" class="btn-vg-2 green">產品資訊</a>
+  <!-- <a href="/contact" class="btn-vg-2 green">訂閱蔬果箱</a> -->
+  <a href="/blog/page/1" class="btn-vg-2 green">蔬果專欄</a>
+  <a href="/qna" class="btn-vg-2 green">常見QA</a>
   <a href="javascript:void(0);" class="icon" onclick="myDropNav1()">
     <i class="fa fa-bars"></i>
   </a>
