--- a/views/share/header.ejs
+++ b/views/share/header.ejs
@@ -73,7 +73,7 @@
 </aside>
 <div id="sidebar-cart-curtain"></div>
 <div class="vg-nav" id="vg-navbar">
-  <a href="/" class="vg-nav-logo btn-vg-2-active">LOGO</a>
+  <a href="/" class="vg-nav-logo"><img src="img/vegeLogo.png" class="img-fluid" style="height: 40px;"></a>
   <a href="/about" class="btn-vg-2">關於我們</a>
   <a href="/activityboard" class="btn-vg-2">最新消息</a>
   <a href="/product" class="btn-vg-2">產品資訊</a>
