--- a/views/orderplaced.ejs
+++ b/views/orderplaced.ejs
@@ -52,6 +52,7 @@
                     var userToken = userData ? JSON.parse(userData) : false;
                     // 設定目前使用者id
                     var uid = userToken.id;
+                    var email, name, oid, o_createtime;
 
                     // 設定使用者
                     // var userData = localStorage.getItem('token');
@@ -75,9 +76,27 @@
 
                     // 連結訂單資料表 vgorder
                     $.get(`/order/list/${uid}`, function (res) {
-                        // console.log(res)
-                        orderNumber.innerText = res[0].oid
-                        memberMail.innerText = res[0].oMail
+                        console.log(res)
+                        orderNumber.innerText = res[0].oid;
+                        memberMail.innerText = res[0].oMail;
+                        email = res[0].oMail;
+                        oid = res[0].oid
+                        name = res[0].oName
+                        o_createtime = res[0].o_ceatetime.split('T')[0]
+
+                        // 寄發通知信
+                        fetch('/server/send/', {
+                            method: 'POST',
+                            headers: {
+                                "Content-Type": "application/json ; charset=UTF-8"
+                            },
+                            body: JSON.stringify({
+                                email,
+                                oid,
+                                name,
+                                o_createtime
+                            })
+                        })
                     })
                 </script>
 
