0915 09:50 忽購物車+結帳+送出訂單

--- a/views/order.ejs
+++ b/views/order.ejs
@@ -447,9 +447,9 @@
                     </div>
                     <!-- order -->
                     <div id="placeorder" class="text-center mt-5">
-                        <input type="checkbox" name="" id="contract" checked><label for="contract"
+                        <input type="checkbox" name="" id="contract"><label for="contract"
                             onclick="serviceinfo()">服務協議</label>
-                        <input type="checkbox" name="" id="reminder" checked><label for="reminder"
+                        <input type="checkbox" name="" id="reminder"><label for="reminder"
                             onclick="noticeinfo()">購物提醒</label><br />
                         <a class="btn btn-vg-lg mt-2 mb-3 p-3" onclick="getdetails()">確認訂單</a><br />
                         <a class="vg-href" onclick="backtocart()">修改訂單</a>
